Cleanup and deleting stuff that isn't used anymore. flexdock-drag has been merged into flexdock-core.